# btech_smart

./: README.md
btech_hardware/: .cproject  .project  CMakeLists.txt
btech_hardware/Debug/: makefile
btech_hardware/Debug/src/: btech_hardware.d  main.d  subdir.mk
btech_hardware/include/: btech_hardware.h
btech_hardware/src/: btech_hardware.c  main.c
btech_iec_client/: .cproject  .project  CMakeLists.txt
btech_iec_client/Debug/: makefile
btech_iec_client/Debug/src/: btech_client.d  btech_client_connections.d  subdir.mk
btech_iec_client/include/: btech_iec_client.h  btech_iec_client_connections.h
btech_iec_client/src/: btech_iec_client.c  btech_iec_client_connections.c
btech_iec_runtime/: .cproject  .project  CMakeLists.txt  readme.txt
btech_iec_runtime/Debug/: btech_iec_runtime  makefile  objects.mk
btech_iec_runtime/Debug/src/: btech_iec_datapoints.d  btech_iec_function_library.d  btech_iec_logger.d  btech_iec_memory_mapper.d  btech_iec_program.d  btech_iec_runtime.d  btech_system_call.d  subdir.mk
btech_iec_runtime/include/: btech_iec_constants.h  btech_iec_datapoints.h  btech_iec_function_library.h  btech_iec_logger.h  btech_iec_memory_mapper.h  btech_iec_program.h  btech_iec_runtime.h
btech_iec_runtime/src/: btech_iec_datapoints.c  btech_iec_function_library.c  btech_iec_logger.c  btech_iec_memory_mapper.c  btech_iec_program.c  btech_iec_runtime.c  btech_system_call.c  program-tranfer.txt
btech_smart/: .cproject  .project  CMakeLists.txt
btech_smart/Debug/: makefile  objects.mk
btech_smart/Debug/src/: btech_iec_program.d  subdir.mk
btech_smart/hardwareconfig/: hardware
btech_smart/src/: btech_iec_global.h  btech_iec_program.c
btech_ur20_modbus/: .cproject  .project  CMakeLists.txt
btech_ur20_modbus/Debug/: makefile
btech_ur20_modbus/Debug/src/: btech_ur20_modbus_device.d  btech_ur20_modules.d  subdir.mk  ur20_modbus_device.d  ur20_modules.d
btech_ur20_modbus/include/: btech_ur20_modbus_device.h  btech_ur20_modules.h
btech_ur20_modbus/src/: btech_ur20_modbus_device.c  btech_ur20_modules.c
